src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>活动</relationshipLabel>
        <relationshipName>Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionResults__c</fullName>
        <label>行动结果</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>维修完成</fullName>
                </value>
                <value>
                    <fullName>维修未完成</fullName>
                </value>
                <value>
                    <fullName>一次安装合格</fullName>
                </value>
                <value>
                    <fullName>一次安装不合格</fullName>
                </value>
                <value>
                    <fullName>二次安装合格</fullName>
                </value>
                <value>
                    <fullName>二次安装不合格</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>行动类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>合同安装</fullName>
                </value>
                <value>
                    <fullName>维修维护</fullName>
                </value>
                <value>
                    <fullName>技术服务</fullName>
                </value>
                <value>
                    <fullName>样机安装</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>动作</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivitiesDistinguish__c</fullName>
        <label>活动区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>客户相关活动</fullName>
                </value>
                <value>
                    <fullName>非客户相关活动</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>活动日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActivityDescription__c</fullName>
        <label>活动描述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityTheme__c</fullName>
        <label>活动类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>拜访</fullName>
                </value>
                <value>
                    <fullName>电话</fullName>
                </value>
                <value>
                    <fullName>邮件</fullName>
                </value>
                <value>
                    <fullName>会议</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedPerson__c</fullName>
        <label>被分配人</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigAccount__c</fullName>
        <label>大项目客户</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessEntertainment__c</fullName>
        <label>业务招待费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessTravelRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出差申请</label>
        <referenceTo>TravelRequest__c</referenceTo>
        <relationshipLabel>活动</relationshipLabel>
        <relationshipName>CCSQ2sWF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessTraveling__c</fullName>
        <label>市内交通费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ID__c</fullName>
        <formula>AccountName__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>活动</relationshipLabel>
        <relationshipName>CaseSJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunicationContents__c</fullName>
        <label>沟通内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompletionStatus__c</fullName>
        <label>活动完成状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>已完成</fullName>
                </value>
                <value>
                    <fullName>未完成</fullName>
                    <default>true</default>
                    <label>未完成</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correspondence__c</fullName>
        <label>通讯费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerTrainingFee__c</fullName>
        <label>客户培训费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CreatedBy.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomesticTravelExpenses__c</fullName>
        <label>境内差旅费（含税）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ErJi__c</fullName>
        <formula>Owner:User.SecondarySector__c</formula>
        <label>销售活动所有人：二级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExistingProblem__c</fullName>
        <label>存在问题</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>所有事件计数</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalCustomerName__c</fullName>
        <formula>NameOpportunity__r.FinalCustomer__r.Name</formula>
        <label>最终客户名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GZRCC__c</fullName>
        <label>工作日出差天数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalMeetingExpenses__c</fullName>
        <label>内部会议费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JJRCC__c</fullName>
        <label>节假日出差天数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadReview__c</fullName>
        <label>上级点评</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MobileContent__c</fullName>
        <description>选择其他时请在工作内容中注明。</description>
        <inlineHelpText>选择其他时请在工作内容中注明。</inlineHelpText>
        <label>行动内容</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>合同机安装</fullName>
                </value>
                <value>
                    <fullName>维修维护</fullName>
                </value>
                <value>
                    <fullName>保修谈判</fullName>
                </value>
                <value>
                    <fullName>谈判议价</fullName>
                </value>
                <value>
                    <fullName>送配备件</fullName>
                </value>
                <value>
                    <fullName>上门拜访</fullName>
                </value>
                <value>
                    <fullName>客户培训</fullName>
                </value>
                <value>
                    <fullName>招标投标</fullName>
                </value>
                <value>
                    <fullName>送发票办入库</fullName>
                </value>
                <value>
                    <fullName>安装环境确认</fullName>
                </value>
                <value>
                    <fullName>设备移机</fullName>
                </value>
                <value>
                    <fullName>其他（请在“工作内容”中描述）</fullName>
                </value>
                <value>
                    <fullName>样机安装</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NameOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售机会名称</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>活动</relationshipLabel>
        <relationshipName>Opportunitys_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NeedSupport__c</fullName>
        <label>需要支持</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <label>下一步方案</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityStage_del1__c</fullName>
        <formula>TEXT( NameOpportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>业务机会阶段</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverseasTravelExpenses__c</fullName>
        <label>售后维修费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Possessor__c</fullName>
        <formula>CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>所有者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SanJi__c</fullName>
        <formula>Owner:User.TertiarySector__c</formula>
        <label>销售活动所有人：三级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiJi__c</fullName>
        <formula>Owner:User.LfourDepartment__c</formula>
        <label>销售活动所有人：四级部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrainingFees__c</fullName>
        <label>培训费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnfinishedCause__c</fullName>
        <inlineHelpText>请在“存在问题”中描述。</inlineHelpText>
        <label>未完成原因</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ActionResults__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>缺少配备件</fullName>
                </value>
                <value>
                    <fullName>其他（请在“存在问题”中描述）</fullName>
                </value>
                <value>
                    <fullName>设备故障</fullName>
                </value>
                <value>
                    <fullName>未协调好（代理商原因）</fullName>
                </value>
                <value>
                    <fullName>场地不合格</fullName>
                </value>
                <value>
                    <fullName>备件质量问题</fullName>
                </value>
                <value>
                    <fullName>故障判断有误</fullName>
                </value>
                <value>
                    <fullName>工具不全（没有功率计等）</fullName>
                </value>
                <value>
                    <fullName>备件不全</fullName>
                </value>
                <value>
                    <fullName>未授权维修</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WeekDay__c</fullName>
        <label>星期</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkContent__c</fullName>
        <label>工作内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZMCC__c</fullName>
        <label>周末出差天数</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lxr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountName__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>活动</relationshipLabel>
        <relationshipName>lxr</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>ActivitiesDistinguish__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>ActivityTheme__c</columns>
        <columns>CompletionStatus__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>NameOpportunity__c</columns>
        <columns>AccountName__c</columns>
        <columns>FinalCustomerName__c</columns>
        <columns>SiJi__c</columns>
        <columns>ErJi__c</columns>
        <columns>SanJi__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ErJi__c</field>
            <operation>equals</operation>
            <value>香港公司</value>
        </filters>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>notContain</operation>
            <value>审批通过</value>
        </filters>
        <label>香港销售活动</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>View111222</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>FinalCustomerName__c</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>ActivityDescription__c</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SanJi__c</field>
            <operation>equals</operation>
            <value>欧堡事业部</value>
        </filters>
        <label>欧堡销售活动</label>
        <sharedTo>
            <role>AreaManager04211</role>
            <role>DirectorEuropean</role>
            <role>ManagerNortheast0421</role>
            <role>X0422</role>
            <role>X04221</role>
            <role>X0423</role>
            <role>X04231</role>
            <role>X0424</role>
            <role>X04241</role>
            <role>X0425</role>
            <role>X04251</role>
            <role>X0426</role>
            <role>X04261</role>
            <role>X0427</role>
            <role>X04271</role>
            <role>X0428</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View11123</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LeadReview__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>领导点评</label>
        <sharedTo>
            <role>AnhuiArea</role>
            <role>Esz</role>
            <role>FukienDistrict</role>
            <role>GuangzhouArea</role>
            <role>GuiQiong</role>
            <role>HeilongjiangArea</role>
            <role>JiangsuArea</role>
            <role>LuYu</role>
            <role>ManagerNortheast</role>
            <role>ManagerNortheast0421</role>
            <role>NorthDistrict</role>
            <role>RegionalManager</role>
            <role>ShanghaiArea</role>
            <role>X0412</role>
            <role>X0413</role>
            <role>X0417</role>
            <role>X0422</role>
            <role>X0423</role>
            <role>X0424</role>
            <role>X0425</role>
            <role>X0426</role>
            <role>X0427</role>
            <role>ZhejiangArea</role>
            <role>jilinRegion</role>
        </sharedTo>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>